Added html-to-markdown package

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "klaviyo/api": "^5.1"
+        "klaviyo/api": "^5.1",
+        "league/html-to-markdown": "^5.1"
     },
     "extra": {
         "laravel": {
